# relaxheur

./: .gitignore  README.md  bb_improvements.py  branch_bound.py  branch_bound_aa.py  branch_bound_all.py  fib_heap.py  heap_dct.py  heuristics.py  heuristics_new.py  improvements_cur.py  knapsackbb1.py  lin_kernighan_2.py  linkernighan.py  min_cut.py  min_cut_heap.py  pseudocode.txt  pseudocost_branching.py  pyproject.toml  relax.py  relax_bb.py  relax_np.py  relax_pure.py  stoerwagner.py  stoerwagner2.py  test_annealing.py  test_mincut.py  tour_structure.py  with_entries.py
.github/workflows/: ci.yml
src/tisp/: __init__.py  error.py  graph.py  heuristic.py  parser.py  solver.py  tisp.py  tour.py  types.py
src/tisp/branch_bound/: __init__.py  branch_bound.py  branching.py
src/tisp/heuristic/: compute.py  lin_kernighan.py
src/tisp/lp/: cut_relax.py  model.py  optimize.py
