[tool.poetry]
name = "relaxheur"
version = "0.1.0"
description = ""
authors = ["tmtenbrink <T.M.tenBrink@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
gurobipy = "^10.0.3"



[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
gurobipy-stubs = "^2.0.0"
networkx = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
