[tool.poetry]
name = "relaxheur"
version = "0.1.0"
description = ""
authors = ["tmtenbrink <T.M.tenBrink@student.tudelft.nl>"]
readme = "README.md"
packages = [
    { include = "tisp", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
gurobipy = "^10.0.3"
mip = "^1.15.0"

[tool.poetry.scripts]
tisp = "tisp.solver:run"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
gurobipy-stubs = "^2.0.0"
networkx = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
